# SmartFlaskApp

./: pyproject.toml
smartflaskapp/instance/: app_test.db
tests/: test_smartflaskapp.py
