[tool.poetry]
name = "SmartFlaskApp"
version = "0.1.0"
description = ""
authors = ["Leander0694 <leandersavio@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Login = "^0.6.2"
marshmallow = "^3.19.0"
Flask-Bcrypt = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
